--- a/.env
+++ b/.env
@@ -1,22 +1,22 @@
 VUE_APP_PROJECT = "https://github.com/ACL4SSR/ACL4SSR"
 
-VUE_APP_BOT_LINK = "https://t.me/ACL4SSR"
+VUE_APP_BOT_LINK = "https://t.me/CmCloudChannel"
 
 VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/config/ACL4SSR_Online.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subcon.dlj.tf"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub.lryu4.com"
 
 # API 客户端
 VUE_APP_SUBCONVERTER_DEFAULT_CLIENTTYPE = "clash&new_name=true"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://s.zhp.one"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_BACKEND = "https://api.wcc.best"
+VUE_APP_CONFIG_UPLOAD_BACKEND = "https://sub.lryu4.com"
 
 # 页面配置
 VUE_APP_USE_STORAGE = true 
